# data-engineering-playground

./: README.md  pyproject.toml  setup.cfg  setup.py
data/artifacts1/: training_data.parquet
data/artifacts1/daterange2/: training_data1_generated.parquet
data/artifacts2/reqid_001/: 1757527232_1757278522_part1.parquet  1757527232_1757278522_part2.parquet
data/artifacts3/reqid_001/: 1757527256_1757278582_part_001.parquet  1757527256_1757278582_part_002.parquet
data/output/: merged_parquet.parquet
data/processed/: merged_final.parquet
doc/: reusable_package.docx  ~$usable_package.docx
notebooks/: data_generate.ipynb  data_handel_another_format.ipynb  data_handel_automation.ipynb  data_handel_full_files.ipynb  data_handel_full_part_files.ipynb  data_processing.ipynb  merge_parquet_files.ipynb  test.ipynb
notebooks/dataplay/: parquet_zip_loader.py
src/data_engineering/: pipeline_builder.py
tests/: test_parquet_zip_loader.py
