[metadata]
name = data_engineering
version = 0.0.1
description = data engineering
author = Your Name
license = MIT

[options]
packages = find_namespace:
package_dir =
    =src
include_package_data = True
zip_safe = False

install_requires =
    pandas
    numpy
    matplotlib
    plotly
    seaborn
    scikit-learn
    numpy
    pandas
    requests
    urllib3
    pytest
    pydantic
    pydantic-settings
    pytest-cov
    hypothesis
    python-dotenv
    pyarrow
    pyjwt

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    setuptools

[tool:pytest]
addopts =
    --cov=data_engineering
    --cov-report=term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths =
    tests
